overflow fixed

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ html {
 body {
   height: 100%;
   min-height: 100vh;
-  overflow-x: hidden;
+  overflow: hidden;
   font-family: sans-serif;
   font-size: 1.8rem;
   background-color: #f9f7f3;
